--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
   <body class="h-full">
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div class="" id="modal"></div>
+
     <div class="flex flex-col h-full" id="root"></div>
 
     <script src="/src/index.jsx" type="module"></script>
