--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="h-full">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="" id="modal"></div>
+    <div id="modal"></div>
 
     <div class="flex flex-col h-full" id="root"></div>
 
