add bg color to body

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="image/ico" href="assets/favicon.ico" />
     <title>Neurodeploy console</title>
   </head>
-  <body class="h-full">
+  <body class="h-full bg-zinc-800">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="modal"></div>
 
